kubernetes/apps/home-automation/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  labels:
    app: trilium
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: trilium
